--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,14 @@
     <script src="p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./lib/sweetalert.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="./lib/sweetalert.css" />
+
     <meta charset="utf-8">
 
   </head>
